--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ description = """
 WMI crate for rust.
 """
 categories = ["api-bindings", "os::windows-apis"]
+keywords = ["wmi", "com", "win32"]
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { git = "https://github.com/retep998/winapi-rs.git", branch = "0.3", features = ["objbase", "wbemcli", "objidlbase", "oaidl", "oleauto", "errhandlingapi"] }
