--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,18 +18,13 @@ keywords = ["wmi", "com", "win32"]
 test = []
 
 [target.'cfg(target_os = "windows")'.dependencies]
-winapi = { git = "https://github.com/retep998/winapi-rs.git", branch = "0.3", features = ["objbase", "wbemcli", "objidlbase", "oaidl", "oleauto", "errhandlingapi"] }
-failure = "*"
-log = "*"
-env_logger = "*"
-base64 = "*"
-regex = "*"
-lazy_static = "*"
-simple_logger = "*"
-widestring = "*"
-serde = { version = "*", features = ["derive"] }
-chrono = { version = "*", features = ["serde"] }
+winapi = { version = "0.3.7", features = ["objbase", "wbemcli", "objidlbase", "oaidl", "oleauto", "errhandlingapi"] }
+failure = "0.1.5"
+log = "0.4"
+widestring = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 lazy_static = "1.2.0"
-serde_json = { version = "*" }
+serde_json = { version = "1.0" }
