Fix license, update readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "wmi"
 version = "0.1.0"
 authors = ["Ohad Ravid <ohad.rv@gmail.com>"]
 edition = "2018"
-license = "MIT|Apache-2.0"
+license = "MIT OR Apache-2.0"
 readme = "README.md"
 documentation = "https://ohadravid.github.io/wmi-rs/docs/wmi/"
 homepage = "https://github.com/ohadravid/wmi-rs"
