--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wmi"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Ohad Ravid <ohad.rv@gmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -15,7 +15,7 @@ categories = ["api-bindings", "os::windows-apis"]
 keywords = ["wmi", "com", "win32"]
 
 [features]
-test = []
+test = ["lazy_static"]
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3.7", features = ["objbase", "wbemcli", "objidlbase", "oaidl", "oleauto", "errhandlingapi"] }
@@ -24,6 +24,7 @@ log = "0.4"
 widestring = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
+lazy_static = { version = "1.2.0", optional = true }
 
 [dev-dependencies]
 lazy_static = "1.2.0"
