--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,6 @@ lazy_static = { version = "1.2.0", optional = true }
 [dev-dependencies]
 lazy_static = "1.2.0"
 serde_json = { version = "1.0" }
+
+[[bin]]
+name = "wmiq"
