--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,12 @@ lazy_static = { version = "1.2.0", optional = true }
 [dev-dependencies]
 lazy_static = "1.2.0"
 serde_json = { version = "1.0" }
+criterion = "0.2"
 
 [[bin]]
 name = "wmiq"
+
+[[bench]]
+name = "benchmark"
+path = "./src/benches/benchmark.rs"
+harness = false
