--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ strategy:
     windows-stable:
       imageName: 'vs2017-win2016'
       target: 'x86_64-pc-windows-msvc'
-      rustup_toolchain: stable
+      rustup_toolchain: nightly
 
 pool:
   vmImage: $(imageName)
@@ -18,14 +18,14 @@ steps:
   - script: |
       curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain $RUSTUP_TOOLCHAIN
       echo "##vso[task.setvariable variable=PATH;]$PATH:$HOME/.cargo/bin"
-    displayName: Install rust
+    displayName: Install rust (posix)
     condition: ne( variables['Agent.OS'], 'Windows_NT' )
 
   - script: |
       curl -sSf -o rustup-init.exe https://win.rustup.rs
       rustup-init.exe -y --default-toolchain %RUSTUP_TOOLCHAIN%
       echo "##vso[task.setvariable variable=PATH;]%PATH%;%USERPROFILE%\.cargo\bin"
-    displayName: Windows install rust
+    displayName: Install rust (windows)
     condition: eq( variables['Agent.OS'], 'Windows_NT' )
 
   - script: cargo build --release
@@ -33,12 +33,6 @@ steps:
 
   - script: cargo test
     displayName: Cargo test
-  - bash: |
-      MY_TAG="$(Build.SourceBranch)"
-      MY_TAG=${MY_TAG#refs/tags/}
-      echo $MY_TAG
-      echo "##vso[task.setvariable variable=build.my_tag]$MY_TAG"
-    displayName: "Create tag variable"
 
   - script: cargo publish
     displayName: Cargo publish
