--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,10 @@ steps:
   - script: cargo test
     displayName: Cargo test
 
-  - script: cargo publish
+  - script: |
+      cargo login $env:CRATES_IO_TOKEN
+      cargo publish
     displayName: Cargo publish
     condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+    env:
+      CRATES_IO_TOKEN: $(crates_io_token)
