--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ widestring = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 lazy_static = { version = "1.4.0", optional = true }
-thiserror = "1.0.20"
+thiserror = "^1"
 
 [build-dependencies]
 little-skeptic = "0.15"
