--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ thiserror = "^1"
 lazy_static = "1.4.0"
 serde_json = { version = "1.0" }
 criterion = "0.3"
+tempdir = "0.3"
 
 [[bin]]
 name = "wmiq"
