--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ default-target = "x86_64-pc-windows-msvc"
 
 [features]
 test = ["lazy_static"]
-async-query = ["com-impl", "com_ptr"]
+async-query = ["com-impl", "wio"]
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3.9", features = ["objbase", "wbemcli", "objidlbase", "oaidl", "oleauto", "errhandlingapi", "wtypes", "wtypesbase"] }
@@ -31,7 +31,7 @@ lazy_static = { version = "1.4.0", optional = true }
 thiserror = "^1"
 # dependencies for async queries
 com-impl = {version = "0.1.1", optional = true}
-com_ptr = {version = "0.1.3", optional = true}
+wio = {version = "0.2.2", optional = true}
 
 [dev-dependencies]
 lazy_static = "1.4.0"
