--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ default-target = "x86_64-pc-windows-msvc"
 
 [features]
 test = ["lazy_static", "async-std"]
-async-query = ["com-impl", "wio", "async-channel"]
+async-query = ["com-impl", "wio", "async-channel", "futures"]
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3.9", features = ["objbase", "wbemcli", "objidlbase", "oaidl", "oleauto", "errhandlingapi", "wtypes", "wtypesbase"] }
@@ -34,6 +34,7 @@ com-impl = {version = "0.1.1", optional = true}
 wio = {version = "0.2.2", optional = true}
 async-channel = {version = "1.5.1", optional = true}
 async-std = { version = "1.8.0",  features = ["attributes"], optional = true }
+futures = {version = "0.3", optional = true}
 
 [dev-dependencies]
 lazy_static = "1.4.0"
