--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ chrono = { version = "0.4", features = ["serde"] }
 lazy_static = { version = "1.4.0", optional = true }
 thiserror = "^1"
 # dependencies for async queries
-com-impl = {version = "0.1.1", optional = true}
+com-impl = { git = "https://github.com/Connicpu/com-impl", optional = true}
 wio = {version = "0.2.2", optional = true}
 async-channel = {version = "1.5.1", optional = true}
 async-std = { version = "1.8.0",  features = ["attributes"], optional = true }
