--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ default-target = "x86_64-pc-windows-msvc"
 
 [features]
 test = ["lazy_static", "async-std"]
-async-query = ["com-impl", "wio", "async-channel", "futures"]
+async-query = ["async-channel", "futures", "com"]
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3.9", features = ["objbase", "wbemcli", "objidlbase", "oaidl", "oleauto", "errhandlingapi", "wtypes", "wtypesbase"] }
@@ -29,12 +29,10 @@ serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 lazy_static = { version = "1.4.0", optional = true }
 thiserror = "^1"
-# dependencies for async queries
-com-impl = { git = "https://github.com/Connicpu/com-impl", optional = true}
-wio = {version = "0.2.2", optional = true}
 async-channel = {version = "1.5.1", optional = true}
 async-std = { version = "1.8.0",  features = ["attributes"], optional = true }
-futures = {version = "0.3", optional = true}
+futures = { version = "0.3", optional = true}
+com = { version = "0.4", features = ["production"], optional = true }
 
 [dev-dependencies]
 lazy_static = "1.4.0"
