--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wmi"
-version = "0.9.2"
+version = "0.9.3"
 authors = ["Ohad Ravid <ohad.rv@gmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -13,21 +13,17 @@ WMI crate for rust.
 """
 categories = ["api-bindings", "os::windows-apis"]
 keywords = ["wmi", "com", "win32"]
+resolver = "2"
 
 [package.metadata.docs.rs]
 default-target = "x86_64-pc-windows-msvc"
 
 [features]
 default = ["chrono"]
+# Use { default-features = false, features = ["time"] } to use `time` instead of `chrono`.
 
 test = ["lazy_static", "async-std"]
 async-query = ["async-channel", "futures", "com"]
-# Make WMIDateTime use `time::OffsetDateTime` instead of `chrono::DateTime`
-# Note: this **replaces** the `chrono` dep with the `time`.
-# The default is using `chrono`.
-# It is a compile-time error to not have either the default or this feature active.
-time-instead-of-chrono = ["time"]
-
 
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3.9", features = ["objbase", "wbemcli", "objidlbase", "oaidl", "oleauto", "errhandlingapi", "wtypes", "wtypesbase"] }
@@ -48,7 +44,7 @@ lazy_static = "1.4.0"
 serde_json = { version = "1.0" }
 criterion = "0.3"
 tempdir = "0.3"
-async-std = "1.8.0"
+async-std = { version = "1.10",  features = ["attributes"] }
 
 [[bin]]
 name = "wmiq"
