--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ serde_json = { version = "1.0" }
 criterion = "0.3"
 tempdir = "0.3"
 async-std = { version = "1.10",  features = ["attributes"] }
+tokio = { version = "1.20.0", features = ["rt", "macros"] }
 
 [[bin]]
 name = "wmiq"
