--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ test = []
 [target.'cfg(target_os = "windows")'.dependencies]
 winapi = { version = "0.3.9", features = ["objbase", "wbemcli", "objidlbase", "oaidl", "oleauto", "errhandlingapi", "wtypes", "wtypesbase"] }
 time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"], optional = true }
-chrono = { version = "0.4", features = ["serde"], optional = true }
+chrono = { version = "0.4", features = ["clock", "std", "serde"], optional = true, default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 com = { version = "0.6", features = ["production"] }
 futures = { version = "0.3" }
