--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -72,3 +72,21 @@ jobs:
         with:
           command: test
           args: --doc --features=test
+
+  fmt:
+    name: Rustfmt
+    runs-on: windows-2019
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          components: rustfmt
+
+      - name: Run format check
+        uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --check
