--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,36 +10,23 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Setup Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+        uses: dtolnay/rust-toolchain@stable
 
       # Cargo build - Only chrono (default features)
       - name: Build - Default
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
+        run: cargo build
 
       # Cargo build - No features
       - name: Build - No features
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --no-default-features
+        run: cargo build --no-default-features
 
       # Cargo build - Only time
       - name: Build - Only time feature
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --no-default-features --features=time
+        run: cargo build --no-default-features --features=time
 
       # Cargo build - All features
       - name: Build - All features
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --all-features
+        run: cargo build --all-features
 
   test:
     name: Run tests
@@ -48,30 +35,19 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Setup Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+        uses: dtolnay/rust-toolchain@stable
 
       # Test on default features
       - name: Test - All targets
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-targets
+        run: cargo test --all-targets
 
       # Test time crate
       - name: Test - Only tests with the Time crate
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --tests --no-default-features --features=time
+        run: cargo test --tests --no-default-features --features=time
 
       # Test documentation with the 'test' feature
       - name: Test - Only Documentation
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --doc --features=test
+        run: cargo test --doc --features=test
 
   fmt:
     name: Rustfmt
@@ -80,16 +56,12 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Setup Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
           components: rustfmt
 
       - name: Run format check
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --check
+        run: cargo fmt --check
 
   clippy:
     name: Clippy
@@ -98,13 +70,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Setup Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
           components: clippy
 
       - name: Run clippy
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: -- -D warnings
+        run: cargo clippy -- -D warnings
