--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,20 +7,20 @@ on:
 
 jobs:
   create-release:
-    name: Release crate
+    name: create-release
     runs-on: windows-2019
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
+      - uses: actions/checkout@v3
+      
+      - name: Check semver
+        uses: obi1kenobi/cargo-semver-checks-action@v2
+      - name: Cleanup
+        run: rm -r -force semver-checks
 
-      - name: Setup Rust toolchain
-        uses: actions-rs/toolchain@v1
+      - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-
-      - name: Publish crate
-        uses: actions-rs/cargo@v1
+      - uses: actions-rs/cargo@v1
         with:
           command: publish
           args: --token ${{ secrets.CRATES_IO_TOKEN }}
