Implement variant-based struct serialization
- Adds conversion function from wmi-rs' Variant to windows-rs' VARIANT
- Adds custom serializer to take a struct and convert it to a HashMap of (field name, field value) pairs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ serde = { version = "1.0", features = ["derive"] }
 futures = { version = "0.3" }
 thiserror = "^2"
 log = "0.4"
+typeid = "1.0.2"
 
 [dev-dependencies]
 async-std = { version = "1.10",  features = ["attributes"] }
