--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ tokio = { version = "1.20.0", features = ["rt", "macros"] }
 serde_json = { version = "1.0" }
 criterion = "0.5"
 tempdir = "0.3"
+lazy-regex = "3.4.1"
 
 [[bin]]
 name = "wmiq"
