--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -28,6 +28,34 @@ jobs:
       - name: Build - All features
         run: cargo build --all-features
 
+  windows-crate-compat:
+    name: windows-rs crate compatibility (${{ matrix.windows-version }})
+    runs-on: windows-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        windows-version: ["0.59.0", "0.60.0", "0.61.1", "0.62.2"]
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Setup Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Pin windows crate version
+        shell: pwsh
+        run: |
+          $ErrorActionPreference = "Stop"
+          cargo generate-lockfile
+
+          $windows_pkgid = cargo pkgid windows
+          $windows_core_pkgid = cargo pkgid windows-core
+
+          cargo update "$windows_pkgid" --precise ${{ matrix.windows-version }}
+          cargo update "$windows_core_pkgid" --precise ${{ matrix.windows-version }}
+
+      - name: Check - All features
+        run: cargo check --all-features
+
   test:
     name: Run tests
     runs-on: windows-latest
